fixed form kontakt form field alignment, fixed sign/signup form fields height

--- a/index.css
+++ b/index.css
@@ -1196,7 +1196,7 @@ img{
 /* Trigger box background */
 
 .select2-selection__rendered{
-    padding: 9px 16px !important;
+    padding: 0px 16px !important;
     border-radius: 0.5rem;
 }
 
@@ -1214,11 +1214,15 @@ img{
 
 }
 
+.select2-container .select2-selection--single{
+    height: 40px !important;
+}
+
 .select2-container .select2-selection--single,
 .select2-container .select2-selection--multiple {
     background-color: transparent !important;
     border: 1px solid #ced4da;
-    min-height: 48px !important;
+    min-height: 42px !important;
     border-radius: 0.375rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -1556,7 +1560,7 @@ img{
 }
 
 .select2-container--default .select2-selection--single .select2-selection__arrow {
-    height: 36px;
+    height: 25px;
 }
 
 .select2-dropdown{
